# osc2mqtt

./: .env  Cargo.toml  Dockerfile
src/: convertions.rs  homeassistant.rs  main.rs
