[package]
name = "osc2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-osc = "0.2.0"
async-std = {version = "1.12.0", features = ["attributes"]}
paho-mqtt = "0.12.0"
serde_json = "1.0.93"
